@@ -256,6 +256,7 @@
     "*://*.globes.co.il/*",
     "*://*.globo.com/*",
     "*://*.goldcoastbulletin.com.au/*",
+    "*://*.golem.de/*",
     "*://*.goodhousekeeping.com/*",
     "*://*.gooieneemlander.nl/*",
     "*://*.gq.com/*",
@@ -741,5 +742,5 @@
     "*://*.wallkit.net/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.1.9.8"
+  "version": "3.1.9.9"
 }
